2011-08-17  Chris Fleizach  <cfleizach@apple.com>

        Accessibility stack exhaustion using role attribute
        https://bugs.webkit.org/show_bug.cgi?id=65174

        Make sure we do not call accessibilityIsIgnored() during the AccessibilityObject
        creation flow. That can lead to loops.
   
        Reviewed by Darin Adler.

        Tests: accessibility/crash-determining-aria-role-when-label-present.html

        * accessibility/AccessibilityObject.cpp:
        (WebCore::createARIARoleMap):
        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::remapAriaRoleDueToParent):
        (WebCore::AccessibilityRenderObject::determineAriaRoleAttribute):
        * accessibility/AccessibilityRenderObject.h:

2011-08-17  James Robinson  <jamesr@chromium.org>

        [chromium] Crash if compositing is disabled during updateLayers()
        https://bugs.webkit.org/show_bug.cgi?id=66353

        Reviewed by Kenneth Russell.

        If compositing is turned off during LayerRendererChromium::updateLayers(), the rootLayer() will become null.
        Sicne CCLayerTreeHost::doComposite() calls updateLayers() and then drawLayers() without checking for this case,
        drawLayers() has to return without doing anything if the root layer is null.

        Crash fixed based on crash reports.  No known reliably repro case, unfortunately.

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::drawLayers):

2011-08-17  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/9971293> Mid-word breaks can occur in the middle of a surrogate pair
        https://bugs.webkit.org/show_bug.cgi?id=66402

        Reviewed by Dave Hyatt.

        Test: fast/text/midword-break-before-surrogate-pair-2.html

        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::LineBreaker::nextLineBreak): Just never allow a mid-word
        break before a trailing surrogate.
